fixed header overlap

--- a/box-model-challenge/style.css
+++ b/box-model-challenge/style.css
@@ -13,7 +13,7 @@
 }
 .header h2 {
 	width: 1000px;
-	margin: -20px auto 0;
+	margin: 0 auto 0;
 }
 .picture-content {
 	width: 1000px;
